# apprazor

./: .gitignore  .vimrc  Main.hs  Setup.lhs  app.cabal  test.sh
clients/: python.py
static/: common.js  index.html  shared.css  test-details.html  test.html
static/lib/: bluff-src.js  excanvas.js  functional.js  jquery.flot.js  to-function.js
tests/: test_server.py
